--- a/book.html
+++ b/book.html
@@ -10,7 +10,7 @@
         <div class="container2">
             <nav class="navbar">
                 <ul>
-                    <li><a href="t_b.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="aboutus.html">About</a></li>
                     <li><a href="#">Contact Us</a></li>
                 </ul>
