--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
          <ul>
             <li><a href="#">TRAIN NAME</a></li>
             <li><a href="#">TRAIN NO</a></li>
-            <li><a href="#">BOOKING</a></li>
+            <li><a href="book.html">BOOKING</a></li>
             <li><a href="#">CONTACT</a></li>
             <li><a href="#">ABOUT</a></li>
          </ul>
