--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h1>DESIGN </h1>
          <P>HLO SHIVANI CK</P>
        <div>
-        <button type="button"><span></span>book</button>
+        <button type="button"><a href="book.html"<span class="text"></span>book your ticket &#8594;</a></button>
         <button type="button"><span></span>cancel</button>
        </div>  
 
